Fix issue with format select dropdown not showing items correctly in portait mode on mobile devices

--- a/src/app/y2m/y2m.component.css
+++ b/src/app/y2m/y2m.component.css
@@ -1,3 +1,9 @@
+@media (orientation: portrait) {
+     mat-option {
+          margin-left: 125px;
+     }
+}
+
 .buttonClass {
      display: flex;
      flex-direction: row;
